2004-10-12  Paul Brook  <paul@coudesourcery.com>

	* config.gcc: Add armv6{k,z,zk}
	* config/arm/arm-cores.def: Add arm1176 and mpcore.
	* config/arm/tune.md: Regenerate.
	* config/arm/arm.c (FL_FOR_ARCH6K, FL_FOR_ARCH6Z, FL_FOR_ARCH6ZK):
	Define.
	(all_architectures): Add armv6k, armv6z, armv6zk.
	* config/arm/lib1funcs.asm: Recognise new arm arcitectures.
	* doc/invoke.texi: Document new arch and cpu values.

2004-10-12  Paul Brook  <paul@coodesourcery.com>

	* config/arm/bpabi.h (SUBTARGET_EXTRA_ASM_SPEC): Change meabi=3 to
	meabi=4.

2004-10-12  Paul Brook  <paul@codesourcery.com>

	* config/arm/arm.md (addsi3_cbranch_scratch): Correct constraints.
	Handle negative constants.

2004-10-12  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c/17301
	* c-typeck.c (convert_arguments): Return error_mark_node if there
	are too few arguments.
	(build_function_call): Handle error_mark_node return from
	convert_arguments.

2004-10-06  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac (symbolic_link): Replace with $LN_S.
	(Assembler/Linker): Hard link from gas and binutils trees.
	* aclocal.m4 (gcc_AC_PROG_LN_S): Try "cp -p" before cp.
	* configure: Regenerate.

2004-10-12  Paul Brook  <paul@codesourcery.com>

	* configure.ac: Don't look for host assembler when building a canadian
	cross.
	* configure: Regenerate.

2004-10-11  Roger Sayle  <roger@eyesopen.com>

	PR other/17361
	* c-opts.c (permit_fortran_options): Delete/obsolete global variable.
	(c_common_init_options): Remove #ifdef CL_F77 code.  Scan command
	line options for "-lang-asm" and if found allow any of the C-family
	front-end options.
	(c_common_handle_option): Remove last use of permit_fortran_options.

2004-10-11  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.c (print_operand): Support 'S' format flag.
	* config/s390/s390.md ("*tmqi_mem"): Use 'S' format flag.
	("*tstsi", "*tstsi_cconly", "*tstsi_cconly2"): Likewise.
	("*tsthiCCT", "*tsthiCCT_cconly", "*tsthi", "*tsthi_cconly"): Likewise.