@@ -1,3 +1,8 @@
+2004-10-12  Richard Earnshaw  <rearnsha@arm.com>
+
+	* arm.c (arm_print_operand): Use output_operand_lossage where possible
+	rather than aborting.
+
 2004-10-12  Paul Brook  <paul@coudesourcery.com>
 
 	* config.gcc: Add armv6{k,z,zk}
